--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "deploy": "gh-page -d dist"
+    "build": "node build.js",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
